@@ -401,6 +401,9 @@ Release 2.1.0-beta - UNRELEASED
     MAPREDUCE-5259. TestTaskLog fails on Windows because of path separators
     missmatch. (Ivan Mitic via cnauroth)
 
+    MAPREDUCE-4019. -list-attempt-ids is not working (Ashwin Shankar,
+    Devaraj K, and B Anil Kumar via jlowe)
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS
 
     MAPREDUCE-4739. Some MapReduce tests fail to find winutils.
@@ -1027,6 +1030,9 @@ Release 0.23.9 - UNRELEASED
 
     MAPREDUCE-5315.  DistCp reports success even on failure. (mithun and jlowe
     via daryn)
+
+    MAPREDUCE-4019. -list-attempt-ids is not working (Ashwin Shankar,
+    Devaraj K, and B Anil Kumar via jlowe)
 
 Release 0.23.8 - 2013-06-05
 
